# wordlookup

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
src/wordlookup/: cli.py
