[project]
name = "wordlookup"
version = "0.1.1"
description = "Fetches and prints definitions for a given word"
readme = "README.md"
authors = [
    { name = "Dave Johnson", email = "dave@thisdavej.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
]

[project.scripts]
wordlookup = "wordlookup.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
